# vllm-mlx-tui

./: .env.example  .gitignore  PRD.md  README.md  a3b7e3f3.md  architecture.md  pyproject.toml  run.sh  run_go_wave.sh  run_python_wave.sh  uiux.md
docs/: PRD.md  uiux.md
go-wave/: README.md  go.mod  go.sum  main.go
go-wave/internal/cache/: scanner.go
go-wave/internal/client/: sse.go
go-wave/internal/server/: manager.go
go-wave/internal/ui/: app.go  app_test.go  chat.go
python-wave/: pyproject.toml
python-wave/src/vllm_wave/: __main__.py  cache.py  server.py
python-wave/src/vllm_wave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-wave/src/vllm_wave/tui/: app.py  chat.py  launcher.py  metrics.py
src/vllm_mlx_tui/: __main__.py  _vllm_mlx_compat.py  _vllm_mlx_launcher.py  cache.py  downloader.py  profiles.py  server.py  sessions.py
src/vllm_mlx_tui/tui/: app.py  chat.py  help.py  launcher.py  metrics.py  statusbar.py
