[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm_wave"
version = "0.1.0"
description = "A Textual TUI for vllm-mlx"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "httpx>=0.25.0",
    "httpx-sse>=0.3.0",
    "huggingface_hub>=0.20.0",
    "psutil>=5.9.0",
]

[project.scripts]
vllm-wave = "vllm_wave.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
